--- a/Biodata.css
+++ b/Biodata.css
@@ -1,7 +1,30 @@
 body {
     background-image: url(https://images.pexels.com/photos/1122639/pexels-photo-1122639.jpeg?auto=compress&cs=tinysrgb&w=600);
 }
+.nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    margin-bottom: 10px;
+}
 
+.nav li {
+    float: left;
+}
+
+.nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav li a:hover {
+    background-color: #111;
+}
 .box {
     background-color: azure;
     border-radius: 10px;
@@ -23,14 +46,12 @@ h2 {
     
 }
 
-p,
-li {
+p {
     text-align: justify;
     padding-left: 20px;
     padding-right: 20px;
     font-family: "Lucida Console", "Courier New", monospace;
     font-size: 14px;
-    margin: 20px;
     padding: 5px;
     line-height: 1.5;
 }
