--- a/portofolio.css
+++ b/portofolio.css
@@ -1,7 +1,10 @@
-.center {
+.center {    
+    border-radius: 10px;
+    opacity: 60%;
     margin:auto;
-    width: 50%;
-    padding: 5px;
+    width: 80%;
+    padding: 10px;
+
 }
 table, tr, td,th{ 
     border: 1px solid royalblue;        
@@ -22,4 +25,29 @@ p{
 
 body{
     background-image: url(https://images.pexels.com/photos/1122639/pexels-photo-1122639.jpeg?auto=compress&cs=tinysrgb&w=600);
+}
+
+.nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    margin-bottom: 10px;
+}
+
+.nav li {
+    float: left;
+}
+
+.nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav li a:hover {
+    background-color: #111;
 }
