--- a/portofolio.css
+++ b/portofolio.css
@@ -1,26 +1,30 @@
 .center {    
     border-radius: 10px;
-    opacity: 60%;
     margin:auto;
     width: 80%;
     padding: 10px;
+    background-color: azure;
+    opacity: 60%;
 
 }
 table, tr, td,th{ 
     border: 1px solid royalblue;        
     padding: 10;
     justify-content: center;
-    color: aliceblue;
     font-family: "Lucida Console", "Courier New", monospace;
 }
 h1{
     text-align: center;
-    color: aliceblue;
     font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 50px;
 }
 p{
-    color: aliceblue;
     font-family: "Lucida Console", "Courier New", monospace;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 14px;
+    padding: 5px;
+    line-height: 1.5;
 }
 
 body{
